# PhotoShare

./: .env_local  .gitignore  Pipfile  README.md  docker-compose.yml  env  main.py  pyproject.toml  requirements.txt  schemas.py  yourdatabase.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 0830712dadf9_role.py  0bbce901f1c2_add_date_updated_to_comment.py  0de5ed829591_add_is_activ_to_user_model.py  2e927226ecbf_add_cascade_delete_tag.py  406b5f0a5a77_fix_delete_orphan_tags_end.py  47585adda035_delete_user_id_from_comment.py  4b1099f0289d_init.py  52276d43b435_fix_delete_orphan_tags.py  548d4017c9a3_init.py  5b2063af4f05_add_average_rating.py  5fb138d97ecb_no_delete_orphan_tags.py  604a04068c28_fix_delete_orphan_tags_both.py  8f14617da07f_init.py  99e9bbcabe8e_user_role.py  9ded7b66d863_add_rating.py  acb08ece4f9f_role.py  afc9d978cfe5_change_in_models_username_is_unique_.py  b9c885590cc1_fix_all_delete_orphan_tags.py  beb8b046da1a_create_tables_photos_comments_tags_.py  c117a2a76cf0_init.py  d3464fc9dc89_add_cascade_delete.py  d8160fda1589_fix_error_in_user.py  ddb40fcfe149_add_description_field_to_photo.py
postgres-data/: postmaster.pid
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: global.stat
src/: schemas.py
src/conf/: cloudinary_conf.py  config.py  constant.py  env
src/crud/: crud_photo.py
src/database/: db.py  models.py
src/repository/: comment.py  comments.py  photos.py  repos_photo.py  tags.py  users.py
src/routes/: admin.py  auth.py  comments.py  photo.py  photos.py  routes_photo.py  tag.py  tags.py  users.py
src/schemas/: schemas.py
src/services/: auth.py  email_service.py  photos.py
tests/: Test_deletePhotos.py  conftest.py  jaki_kolwiek_plik.py  test_PUT_POST.py  test_comments_with_self.py  test_repository_tags.py  test_route_users.py  test_routes_comments.py  test_unit_admin_moderator_search_users.py  test_unit_repository_comment.py  test_unit_repository_comments.py  test_unit_repository_photos.py  test_unit_repository_tags.py  test_unit_repository_users.py  test_unit_routes_comments.py  test_unit_routes_tag.py  test_unit_search.py  testconf.py
(+13 files in other folders)
