[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = ""
authors = ["Paweł Szumański <pawel.szumanski@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
python-multipart = "^0.0.9"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
redis = "^5.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-mail = "^1.4.1"
cloudinary = "^1.40.0"
bcrypt = "^4.1.2"
qrcode = {extras = ["pil"], version = "^7.4.2"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
